# fastmcp-python-oauth2-with-entra-id

./: .env.sample  README.md  azure_user_mcp_server.py  makefile  pyproject.toml  requirements.txt  simple_oauth_client_example.py
.devcontainer/: devcontainer.json  post_create.sh
auth/: auth_utilities.py  consent_dialog.py  entraid_auth_settings.py  entraid_oauth_provider.py
auth/html/: consent_dialog_page.html
tools/: azure_user_info_utility.py
